Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-28676

file delete prompt glitch

XMLWordPrintable

    • e9320a812 (9.0), 289b42aba (13.0)

      there's a small glitch in the "file has been removed from disk" dialog:

      • "tab" / "right" keys cycles focus between 'save as' and 'save'
      • "left" cycles focus from 'save as' to 'close all' to 'close' to 'save'

      the 'left' key is expected, but the tab/right key is rather unexpected, as one cannot use them to reach close/close all

      (local qtc master build, qt-6.4.2, linux)

        For Gerrit Dashboard: QTCREATORBUG-28676
        # Subject Branch Project Status CR V

            con Eike Ziller
            timblechmann tim blechmann
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes