Fix tab order in "file deleted" dialog on Windows/Linux again

This was fixed with e9320a812252b05a6367462fea698d35f9585eae and shortly
after broke again with 4d6827dde9248b6b47949b535ae361e8c6b04cfa

Amends 4d6827dde9248b6b47949b535ae361e8c6b04cfa

Fixes: QTCREATORBUG-28676
Change-Id: I4a69b1ea1430613d1aa22620b8f10ebff73d66ab
Reviewed-by: <github-actions-qt-creator@cristianadam.eu>
Reviewed-by: Alessandro Portale <alessandro.portale@qt.io>